--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.7.5",
+    "dayjs": "^1.11.13",
     "element-plus": "^2.8.1",
     "pinia": "^2.2.2",
     "prettier": "^3.3.3",
