--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
-    "axios": "^1.7.5",
+    "@types/plotly.js-dist-min": "^2.3.4",
+    "axios": "^1.7.6",
     "dayjs": "^1.11.13",
     "element-plus": "^2.8.1",
     "pinia": "^2.2.2",
+    "plotly.js-dist-min": "^2.35.0",
     "prettier": "^3.3.3",
     "vue": "^3.4.38",
     "vue-router": "^4.4.3"
@@ -23,11 +25,11 @@
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
     "@types/node": "^22.5.1",
-    "@vitejs/plugin-vue": "^5.1.2",
+    "@vitejs/plugin-vue": "^5.1.3",
     "@vue/tsconfig": "^0.5.1",
     "npm-run-all2": "^6.2.2",
     "typescript": "~5.5.4",
     "vite": "^5.4.2",
-    "vue-tsc": "^2.1.0"
+    "vue-tsc": "^2.1.2"
   }
 }
