--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "@types/plotly.js-dist-min": "^2.3.4",
-    "axios": "^1.7.7",
     "dayjs": "^1.11.13",
     "element-plus": "^2.8.1",
     "pinia": "^2.2.2",
@@ -30,6 +29,6 @@
     "npm-run-all2": "^6.2.2",
     "typescript": "~5.5.4",
     "vite": "^5.4.2",
-    "vue-tsc": "^2.1.4"
+    "vue-tsc": "2.1.4"
   }
 }
