--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "element-plus": "^2.8.1",
     "pinia": "^2.2.2",
     "plotly.js-dist-min": "^2.35.0",
+    "plotly.js-locales": "^2.35.0",
     "prettier": "^3.3.3",
     "vue": "^3.4.38",
     "vue-router": "^4.4.3"
