--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "@e965/xlsx": "^0.20.3",
     "@element-plus/icons-vue": "^2.3.1",
+    "@types/papaparse": "^5.3.14",
     "@types/plotly.js-dist-min": "^2.3.4",
     "dayjs": "^1.11.13",
     "element-plus": "^2.8.1",
+    "papaparse": "^5.4.1",
     "pinia": "^2.2.2",
     "plotly.js-dist-min": "^2.35.0",
     "plotly.js-locales": "^2.35.0",
