--- a/package.json
+++ b/package.json
@@ -22,17 +22,17 @@
     "plotly.js-dist-min": "^2.35.0",
     "plotly.js-locales": "^2.35.0",
     "prettier": "^3.3.3",
-    "vue": "^3.5.0",
+    "vue": "^3.5.1",
     "vue-router": "^4.4.3"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
-    "@types/node": "^22.5.3",
+    "@types/node": "^22.5.4",
     "@vitejs/plugin-vue": "^5.1.3",
     "@vue/tsconfig": "^0.5.1",
     "npm-run-all2": "^6.2.2",
-    "typescript": "~5.5.4",
+    "typescript": "^5.5.4",
     "vite": "^5.4.3",
-    "vue-tsc": "2.1.4"
+    "vue-tsc": "^2.1.6"
   }
 }
