--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "@e965/xlsx": "^0.20.3",
     "@element-plus/icons-vue": "^2.3.1",
+    "@types/bcryptjs": "^2.4.6",
     "@types/papaparse": "^5.3.14",
     "@types/plotly.js-dist-min": "^2.3.4",
+    "bcryptjs": "^2.4.3",
     "dayjs": "^1.11.13",
     "element-plus": "^2.8.1",
     "papaparse": "^5.4.1",
