--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/papaparse": "^5.3.14",
     "@types/plotly.js-dist-min": "^2.3.4",
+    "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "dayjs": "^1.11.13",
     "element-plus": "^2.8.2",
