--- a/package.json
+++ b/package.json
@@ -14,28 +14,40 @@
     "@e965/xlsx": "^0.20.3",
     "@element-plus/icons-vue": "^2.3.1",
     "@types/bcryptjs": "^2.4.6",
-    "@types/papaparse": "^5.3.14",
+    "@types/papaparse": "^5.3.15",
+    "@types/plotly.js": "^2.35.1",
     "@types/plotly.js-dist-min": "^2.3.4",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "dayjs": "^1.11.13",
-    "element-plus": "^2.8.2",
+    "element-plus": "^2.8.8",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
+    "mathjs": "^14.0.1",
+    "ml-levenberg-marquardt": "^4.1.3",
+    "numeric": "^1.2.6",
+    "pandas-js": "^0.2.4",
     "papaparse": "^5.4.1",
-    "pinia": "^2.2.2",
-    "plotly.js-dist-min": "^2.35.0",
-    "plotly.js-locales": "^2.35.0",
+    "pinia": "^2.2.6",
+    "plotly.js-dist-min": "^2.35.2",
+    "plotly.js-locales": "^2.35.2",
     "prettier": "^3.3.3",
-    "vue": "^3.5.3",
-    "vue-router": "^4.4.3"
+    "simple-statistics": "^7.8.7",
+    "vue": "^3.5.13",
+    "vue-router": "^4.4.5",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
-    "@types/node": "^22.5.4",
-    "@vitejs/plugin-vue": "^5.1.3",
-    "@vue/tsconfig": "^0.5.1",
-    "npm-run-all2": "^6.2.2",
-    "typescript": "^5.5.4",
-    "vite": "^5.4.3",
-    "vue-tsc": "^2.1.6"
+    "@types/file-saver": "^2.0.7",
+    "@types/node": "^22.9.1",
+    "@types/numeric": "^1.2.6",
+    "@types/xlsx": "^0.0.35",
+    "@vitejs/plugin-vue": "^5.2.0",
+    "@vue/tsconfig": "^0.6.0",
+    "npm-run-all2": "^6.2.6",
+    "typescript": "^5.6.3",
+    "vite": "^5.4.11",
+    "vue-tsc": "^2.1.10"
   }
 }
